Added OpenSea Rankings

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.androidfactory.composecopycat'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.androidfactory.composecopycat"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -49,6 +49,8 @@ android {
 dependencies {
 
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
+    implementation "io.coil-kt:coil-compose:2.2.2"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
